Make Financial Products Support view IDs configurable and fix Zendesk API authentication

--- a/.env
+++ b/.env
@@ -1,10 +1,22 @@
 PORT=3000
+
+# Zendesk configuration
 ZENDESK_SUBDOMAIN=libertytax
 ZENDESK_EMAIL=joseph.aldridge@libtax.com
-ZENDESK_API_TOKEN=Fdx4xvnFbzNQIQ6gwOrjIDzseHy02zyPI7qoFdiB
+ZENDESK_API_TOKEN=uQfQjRwzUHSBsNKJPIFQrAYOUVvRNJtdQTvBZAbI
+# Technical Support
+ZENDESK_VIEW_IDS=360175165913,18773251511447
+
+# Financial Products Support
+FINANCIAL_VIEW_IDS=6908689403031,360186612633,18773518506263
+
+# Financial Products Telegram
+FINANCIAL_TELEGRAM_BOT_TOKEN=7569997887:AAFQqcvSM0ccJWKr9mPN3SofD9BGGXtYKTo
+FINANCIAL_TELEGRAM_CHAT_ID=-4703505082
+
+# SMTP configuration (Gmail)
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=ltsqueuenotifier@gmail.com
 SMTP_PASSWORD=xwgh cnea gorg feah
 NOTIFICATION_EMAIL=joseph.aldridge@libtax.com
-ZENDESK_VIEW_IDS=360175165913,18773251511447
