--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
-    "nodemailer": "^6.9.7",
-    "node-cron": "^3.0.3",
     "axios": "^1.6.2",
-    "ejs": "^3.1.9"
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
-} 
+}
