Add Tax Support queue view with 100-ticket threwshold and 30 minute check interval

--- a/.env
+++ b/.env
@@ -10,6 +10,9 @@ ZENDESK_VIEW_IDS=360175165913,18773251511447
 # Financial Products Support
 FINANCIAL_VIEW_IDS=6908689403031,360186612633,18773518506263
 
+# Tax Support
+TAXSUPPORT_VIEW_IDS=360192271734,27597458029079,16327472919959,16327435163287
+
 # Financial Products Telegram
 FINANCIAL_TELEGRAM_BOT_TOKEN=7569997887:AAFQqcvSM0ccJWKr9mPN3SofD9BGGXtYKTo
 FINANCIAL_TELEGRAM_CHAT_ID=-4703505082
